<resources>
    <string name="url">192.168.0.11</string>
    <string name="app_name">KirolApp</string>
    <string name="cabeceraContinentes">Continentes</string>
    <string name="cabeceraDeporte">Deporte</string>
    <!--Botones toolBar inferior-->
    <string name="home">Home</string>
    <string name="toContinentes">Continentes</string>
    <string name="toExit">Salir</string>
    <!--Campos de acceso-->
    <string name="apodo">Apodo</string>
    <string name="contrasena">Contraseña</string>
    <string name="accederBoton">Acceder</string>
    <string name="bienvenida">Bienvenid@</string>
    <!--Campos de registro-->
    <string name="nombreUsuario">Nombre</string>
    <string name="pwd">Introduce password</string>
    <string name="pwdRepe">Repita password</string>
    <string name="apellido1">1º Apellido</string>
    <string name="apellido2">2º Apellido</string>
    <string name="email">Email</string>
    <string name="sacaFoto">Sacar Foto</string>
    <string name="registrarse">Registrarse</string>
    <string name="volver">Volver</string>
    <string name="claveNoCoincide">Las claves no coinciden</string>
    <string name="claveEsCorta">Las claves deben tener una longitud superior a 4 caracteres</string>
    <!--Navegacion por opciones -->
    <string name="seleccionContinente">Selecciona continente</string>
    <string name="seleccionPais">Selecciona pais</string>
    <string name="seleccionDeporte">Selecciona deporte</string>
    <string name="cargaDescripcionBoton">Carga descripcion</string>
    <string name="cargaAdaptacionBoton">Carga adaptacion</string>
    <string name="foroBajo">Foro nivel bajo</string>
    <string name="foroMedio">Foro nivel medio</string>
    <string name="foroAlto">Foro nivel alto</string>

    <!-- Alertas o advertencias -->
    <string name="dialogo">Consejo</string>
    <string name="aceptar">Si, porfavor</string>
    <string name="negar">No, gracias</string>
    <string name="noConexion">No esta conectado a la red de datos</string>
    <string name="wifiAdvice">Se recomienda activar Wifi para continuar. ¿Desea activarlo?</string>
    <string name="wifiOk">Se recomienda mantener el wifi encendido</string>
    <string name="errorRegistro">No se pudo completar el registro</string>
    <string name="errorAcceso">Datos incorrectos</string>
    <string name="completeCampos">Complete todos los campos.</string>
    <string name="noApp">No existe app para esta tarea</string>
    <string name="noCamera">Su dispositivo no tiene cámara</string>
    <string name="userAdded">Usuario añadido</string>
    <string name="userNoAdded">Error en el sistema. No se pudo añadir el usuario</string>

    <!-- Continentes -->
    <string name="europa">Europa</string>
    <string name="africa">Africa</string>
    <string name="oceania">Oceanía</string>
    <string name="america">América</string>
    <string name="Asia">Asia</string>
    <string name="selectSp">Elige</string>

    <!-- Botones deporte -->
    <string name="desc">Carga descripcion</string>
    <string name="adapt">Carga adaptacion</string>
    <string name="foro1">Foro nivel bajo</string>
    <string name="foro2">Foro nivel medio</string>
    <string name="foro3">Foro nivel alto</string>

    <!-- ForumActivity -->
    <string name="introduceComentario">Introduzca su comentario</string>
    <string name="botonEnviaComentario">Comentar</string>
    <string name="comentarioEnviado">Su comentario fue añadido</string>
    <string name="comentarioNoEnviado">Error. Su comentario no fue añadido</string>




</resources>
