<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.tta.kirolApp.RegisterActivity">

    <EditText
        android:id="@+id/regName"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/nombreUsuario"/>
    <EditText
        android:id="@+id/regNoName"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/apodo"/>
    <EditText
        android:id="@+id/regApellido"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/apellido1"/>
    <EditText
        android:id="@+id/regApellido2"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/apellido2"/>
    <EditText
        android:id="@+id/regPass"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/pwd"/>
    <EditText
        android:id="@+id/regRepPass"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/pwdRepe"/>
    <EditText
        android:id="@+id/regEmail"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sacaFoto"
        android:onClick="takePicture"/>

    <ImageView
        android:id="@+id/fotoRegistro"
        android:layout_gravity="center_horizontal"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:visibility="gone"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:onClick="registrarUsuario"/>

</LinearLayout>
