<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_selected_sport"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.tta.kirolApp.SelectedSportActivity">

    <Button
        android:id="@+id/botonDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/desc"
        android:onClick="cargaDescripcion"/>
    <Button
        android:id="@+id/botonAdapt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/adapt"
        android:onClick="cargaAdaptacion"/>
    <Button
        android:id="@+id/botonForo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/foro1"
        android:onClick="cargaForo1"/>
    <Button
        android:id="@+id/botonForo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/foro1"
        android:onClick="cargaForo2"/>
    <Button
        android:id="@+id/botonForo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/foro3"
        android:onClick="cargaForo3"/>

</LinearLayout>
