<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_sports"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.tta.kirolApp.presentation.SportsActivity">

    <RadioGroup
        android:id="@+id/grupoContinentes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <RadioButton
            android:id="@+id/radioEuropa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/europa"/>
        <RadioButton
            android:id="@+id/radioAfrica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/africa"/>
        <RadioButton
            android:id="@+id/radioAmerica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/america"/>
        <RadioButton
            android:id="@+id/radioAsia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/Asia"/>
        <RadioButton
            android:id="@+id/radioOceania"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/oceania"/>
    </RadioGroup>
    <Button
        android:id="@+id/botonEligeContinente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/selectSp"
        android:onClick="eligeContinente"/>
    <Spinner
        android:id="@+id/paisSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:entries="@array/pruebaSp">
    </Spinner>
    <Spinner
        android:id="@+id/deporteSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone">
    </Spinner>
    <Button
        android:id="@+id/botonEligePais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:text="@string/selectSp"
        android:onClick="eligePais"/>
    <Button
        android:id="@+id/botonEligeDeporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/selectSp"
        android:onClick="eligeDeporte"
        android:visibility="gone"/>

</LinearLayout>
